index terug naar origineel

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet" >
   </head>
   <body>
-    <h1>Beach Paradise NEW</h1>
+    <h1>Beach Paradise</h1>
     <h2>The Top Beach Destinations in the World</h2>
     <div id="beaches">
     <ol>
